--- a/projects/angular/src/data/stack-view/_stack-view.clarity.scss
+++ b/projects/angular/src/data/stack-view/_stack-view.clarity.scss
@@ -159,7 +159,7 @@
         &::before {
           display: inline-block;
           content: '';
-          @include mixins.min-equilateral(tokens.$cds-global-space-7);
+          @include mixins.min-equilateral(density.$clr-base-icon-size-s);
           @include images.icon-background-styles();
           background-image: icons.generateCaretIcon(accordion-variables.$clr-accordion-text-color);
           transform: rotate(-90deg);
