--- a/projects/angular/src/forms/styles/_variables.forms.scss
+++ b/projects/angular/src/forms/styles/_variables.forms.scss
@@ -67,7 +67,7 @@ $clr-forms-select-caret-hover-color: var(--clr-forms-select-caret-hover-color) !
 $clr-forms-select-caret-size: var(--clr-forms-select-caret-size) !default;
 
 // Checkbox
-$clr-forms-checkbox-height: #{tokens.$cds-global-space-7} !default;
+$clr-forms-checkbox-height: var(--clr-forms-checkbox-height) !default;
 $clr-forms-checkbox-border-radius: var(--clr-forms-checkbox-border-radius) !default;
 
 $clr-forms-checkbox-label-color: $clr-forms-label-color !default;
