--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -40,7 +40,7 @@
       clr-icon[shape^='caret'],
       clr-icon[shape^='angle'] {
         color: inherit;
-        @include mixins.min-equilateral(tokens.$cds-global-space-7);
+        @include mixins.min-equilateral(density.$clr-base-icon-size-s);
       }
 
       // NOTE: cds-icon handles direction internally.
@@ -50,10 +50,9 @@
       cds-icon[shape^='angle'] {
         margin-top: unset;
         color: inherit;
-        @include mixins.equilateral(tokens.$cds-global-space-7);
+        @include mixins.equilateral(density.$clr-base-icon-size-s);
       }
 
-      $clr-dropdown-caret-left-margin: tokens.$cds-global-space-2;
       &.btn {
         text-overflow: unset;
 
@@ -205,7 +204,7 @@
       border-bottom-width: dropdown-variables.$clr-dropdown-divider-border-width;
       border-bottom-style: solid;
       border-bottom-color: dropdown-variables.$clr-dropdown-divider-color;
-      margin: tokens.$cds-global-space-6;
+      margin: density.$clr-base-vertical-offset-l density.$clr-base-horizontal-offset-l;
     }
   }
 
@@ -213,7 +212,7 @@
   .btn-group-overflow,
   .tabs-overflow,
   .dropdown {
-    $dropdown-menu-positional-nudge: tokens.$cds-global-space-2;
+    $dropdown-menu-positional-nudge: density.$clr-base-vertical-offset-2xs;
 
     &.open > .dropdown-menu,
     &.open > .dropdown-menu-wrapper > .dropdown-menu {
@@ -290,8 +289,8 @@
 
     // nested dropdown (submenu)
     .dropdown {
-      $clr-dropdown-submenu-overlap-margin: calc(-1 * #{tokens.$cds-global-space-3});
-      $clr-dropdown-submenu-vertical-margin: calc((-1 * #{tokens.$cds-global-space-8}) - #{tokens.$cds-global-space-1});
+      $clr-dropdown-submenu-overlap-margin: #{tokens.$cds-global-space-1};
+      $clr-dropdown-submenu-vertical-margin: calc(-1 * #{density.$clr-base-vertical-offset-2xl});
       // -1 is to account for the border that shifts the menu down by 1 pixel
 
       .dropdown-menu {
