--- a/projects/angular/src/popover/tooltip/_tooltips.clarity.scss
+++ b/projects/angular/src/popover/tooltip/_tooltips.clarity.scss
@@ -52,7 +52,7 @@
     #{$oppB}: 0;
     #{$dirA}: auto;
     #{$dirB}: auto;
-    #{$oppA}: calc(-1 * #{tokens.$cds-global-space-6});
+    #{$oppA}: calc(-1 * #{tooltip-variables.$clr-tooltip-arrow-height});
 
     border-#{$oppB}: tooltip-variables.$clr-tooltip-arrow-height solid tooltip-variables.$clr-tooltip-background-color;
     border-#{$dirA}: tooltip-variables.$clr-tooltip-arrow-width solid tooltip-variables.$clr-tooltip-background-color;
@@ -82,7 +82,7 @@
     top: 0;
     bottom: auto;
     #{$dirA}: auto;
-    #{$oppA}: calc(-1 * #{tokens.$cds-global-space-6});
+    #{$oppA}: calc(-1 * #{tooltip-variables.$clr-tooltip-arrow-width});
 
     border-top: tooltip-variables.$clr-tooltip-arrow-height solid tooltip-variables.$clr-tooltip-background-color;
     border-#{$dirA}: tooltip-variables.$clr-tooltip-arrow-width solid tooltip-variables.$clr-tooltip-background-color;
