--- a/projects/angular/src/popover/tooltip/_variables.tooltip.scss
+++ b/projects/angular/src/popover/tooltip/_variables.tooltip.scss
@@ -6,12 +6,13 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
+@use '../../utils/variables/variables.density' as density;
 
 // Usage: ../popover/tooltip/_tooltips.clarity.scss
-$clr-tooltip-arrow-height: #{tokens.$cds-global-space-5} !default;
-$clr-tooltip-arrow-width: #{tokens.$cds-global-space-5} !default;
+$clr-tooltip-arrow-height: #{density.$clr-base-icon-size-xs} !default;
+$clr-tooltip-arrow-width: #{density.$clr-base-icon-size-xs} !default;
 // arrow width/height (12px) + distance (8px)
-$clr-tooltip-adjusted-margin: calc(tokens.$cds-global-space-6 + tokens.$cds-global-space-5) !default;
+$clr-tooltip-adjusted-margin: calc($clr-tooltip-arrow-height + density.$clr-base-vertical-offset-m) !default;
 
 $clr-tooltip-color: var(--clr-tooltip-color) !default;
 $clr-tooltip-background-color: var(--clr-tooltip-background-color) !default;
