--- a/projects/angular/src/layout/_properties.login.scss
+++ b/projects/angular/src/layout/_properties.login.scss
@@ -8,13 +8,14 @@
 @use '../utils/variables/variables';
 @use '@cds/core/tokens/tokens.scss';
 @use '../emphasis/alert/variables.alert' as alert-variables;
+@use '../utils/variables/variables.density' as density;
 
 @include mixins.exports('login.properties') {
   :root {
     [cds-theme] {
       --clr-login-title-color: #{tokens.$cds-alias-typography-color-400};
       --clr-login-hint-color: #{tokens.$cds-alias-typography-color-400};
-      --clr-login-footer-gap: #{tokens.$cds-global-space-7};
+      --clr-login-footer-gap: #{density.$clr-base-gap-l};
       --clr-login-copyright-color: #{tokens.$cds-alias-typography-link-color};
       --clr-login-background-color: #{tokens.$cds-alias-object-container-background};
       --clr-login-welcome-color: #{tokens.$cds-alias-typography-color-400};
