--- a/projects/angular/src/layout/_login.clarity.scss
+++ b/projects/angular/src/layout/_login.clarity.scss
@@ -10,6 +10,7 @@
 @use '../utils/mixins';
 @use '../utils/variables/variables';
 @use 'variables.login' as login-variables;
+@use '../forms/styles/variables.forms' as forms-variables;
 @use '../emphasis/alert/variables.alert' as alert-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../utils/variables/variables.density' as density;
@@ -51,7 +52,7 @@
 
       .login-header {
         .logo {
-          height: 16px;
+          height: tokens.$cds-global-space-7;
           width: 100%;
           -webkit-mask: icons.generateLoginVMWareLogo();
           mask: icons.generateLoginVMWareLogo();
@@ -149,7 +150,7 @@
               width: 100%;
 
               & > .clr-input {
-                width: calc(100% - tokens.$cds-global-space-9);
+                width: calc(100% - #{forms-variables.$clr-forms-icon-size});
               }
             }
           }
@@ -173,8 +174,8 @@
           padding: density.$clr-base-vertical-offset-m density.$clr-base-horizontal-offset-m;
           background: login-variables.$clr-login-error-background-color;
           color: alert-variables.$clr-alert-danger-font-color;
-          border-radius: tokens.$cds-alias-object-border-radius-100;
-          border: tokens.$cds-alias-object-border-width-100 solid alert-variables.$clr-alert-danger-border-color;
+          border-radius: alert-variables.$clr-alert-borderradius;
+          border: alert-variables.$clr-alert-borderwidth solid alert-variables.$clr-alert-danger-border-color;
 
           &:before {
             content: '';
