fix(signpost): density tokens usage (#1937)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?


- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: CDE-2874

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/popover/signpost/_signposts.clarity.scss
+++ b/projects/angular/src/popover/signpost/_signposts.clarity.scss
@@ -32,7 +32,7 @@
 
       cds-icon,
       clr-icon {
-        @include mixins.equilateral(density.$clr-base-icon-tooltip);
+        @include mixins.equilateral(density.$clr-base-icon-size-l);
         color: signpost-variables.$clr-signpost-action-color;
       }
 
@@ -381,10 +381,14 @@
   }
 
   .signpost-wrap {
+    // bottom padding difference split between `wrap` and `content-body` because of #1503 (CDE-2225)
+    // Wrap have (offset-xl - 1px), Body have 1px;
+    $wrap-bottom-padding: calc(density.$clr-base-vertical-offset-xl - tokens.$cds-global-space-1);
+
     gap: density.$clr-base-gap-s;
-    padding: density.$clr-base-layout-space-m;
+    padding: density.$clr-base-vertical-offset-xl density.$clr-base-horizontal-offset-xl $wrap-bottom-padding;
     border: tokens.$cds-alias-object-border-width-100 solid signpost-variables.$clr-signpost-content-border-color;
-    border-radius: density.$clr-base-border-radius-s;
+    border-radius: signpost-variables.$clr-signpost-border-radius;
     background-color: signpost-variables.$clr-signpost-content-bg-color;
     z-index: map.get(variables.$clr-layers, tooltips);
     position: relative;
