--- a/projects/angular/src/progress/progress-bars/_progress-bars.clarity.scss
+++ b/projects/angular/src/progress/progress-bars/_progress-bars.clarity.scss
@@ -523,7 +523,7 @@
       left: 0;
 
       // by default, positioned at the topmost of its card-block container
-      margin: calc(-1 * density.$clr-base-vertical-offset-l) 0 0;
+      margin: calc(-1 * density.$clr-base-vertical-offset-m) 0 0;
 
       &.top {
         // places progress bar at the top of a card
@@ -531,8 +531,8 @@
         top: 0;
 
         // ATM During card shim removal. Set proper tokens.
-        border-top-left-radius: var(--clr-card-border-radius, density.$clr-base-border-radius-s);
-        border-top-right-radius: var(--clr-card-border-radius, density.$clr-base-border-radius-s);
+        border-top-left-radius: card-variables.$clr-card-border-radius;
+        border-top-right-radius: card-variables.$clr-card-border-radius;
       }
     }
 
