--- a/projects/angular/src/utils/animations/_animations.clarity.scss
+++ b/projects/angular/src/utils/animations/_animations.clarity.scss
@@ -6,6 +6,7 @@
  */
 
 @use '../mixins';
+@use '../variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 /**
@@ -58,7 +59,7 @@ $clr-animation-easing: ease-in-out;
     display: inline-block;
     width: 100%;
     height: 100%;
-    border-radius: tokens.$cds-alias-object-border-radius-100;
+    border-radius: density.$clr-base-border-radius-s;
     background: var(--cds-alias-object-skeleton-loading-gradient);
     animation: var(--cds-global-animation-skeleton-duration) clr-skeleton-loading
       var(--cds-global-animation-easing-in-out) infinite;
