--- a/projects/angular/src/utils/variables/_variables.density.scss
+++ b/projects/angular/src/utils/variables/_variables.density.scss
@@ -114,3 +114,5 @@ $clr-base-header-height: var(--clr-base-header-height);
 $clr-base-tree-node-height: var(--clr-base-tree-node-height);
 
 $clr-base-progress-bar-height: var(--clr-base-progress-bar-height);
+
+$clr-base-check-radio-toggle-gap: var(--clr-base-check-radio-toggle-gap);
