--- a/projects/angular/src/forms/styles/_checkbox.clarity.scss
+++ b/projects/angular/src/forms/styles/_checkbox.clarity.scss
@@ -29,9 +29,12 @@
     align-items: flex-start;
 
     & + .clr-checkbox-wrapper,
-    & + .clr-radio-wrapper,
-    & + .clr-toggle-wrapper {
+    & + .clr-radio-wrapper {
       padding-top: density.$clr-base-check-radio-toggle-gap;
+    }
+
+    & + .clr-toggle-wrapper {
+      margin-top: density.$clr-base-check-radio-toggle-gap;
     }
 
     .clr-control-label {
@@ -175,6 +178,8 @@
   }
 
   .clr-form-compact .clr-checkbox-wrapper {
+    padding-top: 0;
+
     @include forms-mixins.form-flatten-compact-adjustments();
     @include forms-mixins.form-inline-input();
 
