--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -9,6 +9,7 @@
 @use '../../utils/mixins';
 @use '../styles/mixins.forms' as styles-mixins;
 @use '../styles/variables.forms' as forms-variables;
+@use '../../popover/dropdown/variables.dropdown' as dropdown-variables;
 @use 'variables.combobox' as combobox-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../../utils/variables/variables.density' as density;
@@ -213,9 +214,21 @@
       padding: 0 density.$clr-base-horizontal-offset-l;
     }
 
-    .clr-option-group-label {
-      padding-left: density.$clr-base-horizontal-offset-l;
-      font-weight: bold;
+    .clr-combobox-option-group {
+      color: dropdown-variables.$clr-dropdown-header-color;
+
+      .clr-option-group-label {
+        display: block;
+        padding: 0 density.$clr-base-horizontal-offset-l;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        @include mixins.generate-typography-token('SECONDARY-13-MD-EXP');
+      }
+
+      & > .clr-combobox-option {
+        padding-left: density.$clr-base-horizontal-offset-2xl;
+      }
     }
   }
 
