--- a/projects/angular/src/forms/styles/_radio.clarity.scss
+++ b/projects/angular/src/forms/styles/_radio.clarity.scss
@@ -24,14 +24,7 @@
     display: flex;
     align-items: flex-start;
 
-    & + .clr-checkbox-wrapper,
-    & + .clr-radio-wrapper {
-      padding-top: density.$clr-base-check-radio-toggle-gap;
-    }
-
-    & + .clr-toggle-wrapper {
-      margin-top: density.$clr-base-check-radio-toggle-gap;
-    }
+    @include forms-mixins.checkbox-radio-toggle-control-group-gap();
 
     //Hide the default radio
     input[type='radio'] {
