--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -9,6 +9,7 @@
 @use '../../utils/variables/variables.density' as density;
 @use 'variables.forms' as forms-variables;
 @use '../../utils/mixins';
+@use 'mixins.forms' as forms-mixins;
 @use '@cds/core/tokens/tokens.scss';
 
 @mixin clr-toggle-transition-styles() {
@@ -35,14 +36,7 @@
     justify-content: start;
     padding: density.$clr-base-vertical-offset-multi-row-inline-s 0;
 
-    & + .clr-checkbox-wrapper,
-    & + .clr-radio-wrapper {
-      padding-top: density.$clr-base-check-radio-toggle-gap;
-    }
-
-    & + .clr-toggle-wrapper {
-      margin-top: density.$clr-base-check-radio-toggle-gap;
-    }
+    @include forms-mixins.checkbox-radio-toggle-control-group-gap();
 
     label {
       display: inline-block;
