--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -106,11 +106,7 @@
 @mixin generate-dropdown-header() {
   display: block;
   color: dropdown-variables.$clr-dropdown-header-color;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-align: left;
-  justify-content: start;
+  @include mixins.overflow-ellipsis(true);
 
   // Typography
   @include mixins.generate-typography-token(
