fix: dropdown aligment

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -118,7 +118,7 @@
     .btn-link,
     .dropdown-item {
       @include menu-mixins.generate-dropdown-item();
-      @include mixins.overflow-ellipsis(true);
+      @include mixins.overflow-ellipsis(true, 'space-between');
 
       &.active {
         position: relative;
